restricted README to 80 characters across removed some old junk from .hgtags fixed issue 23 (stupid output typo)

--- a/README
+++ b/README
@@ -1,7 +1,13 @@
-To use ACE with your ASSS makefile, copy all files to src/ace/ in your ASSS build environment.
-Running make in src/ will then process all .aces files into .c files and then into the appropriate .o file.
+To use ACE with your ASSS makefile, copy all files to src/ace/ in your ASSS
+build environment.
+
+Running make in src/ will then process all .aces files into .c files (kept in
+the build/ directory as .acec files actually) and then into the appropriate .o
+file. Remember to add your modules to the appopriate library .mk file as with
+any other C module.
 
 To use ACE manually, run "python ace.py --help" for more information.
 
-Report or follow issues on ACE's bitbucket bug tracker: <http://bitbucket.org/akd/ace/issues/?status=new&status=open>
+Report or follow issues on ACE's bitbucket bug tracker:
+<http://bitbucket.org/akd/ace/issues/?status=new&status=open>
 
